<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white">

    <!-- App Logo -->

    <!-- Email Input -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/signup_icon"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="12dp"/>

    <!-- Sign-Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/teal"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginBottom="8dp"/>

    <!-- Already Have an Account? Login Link -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_gravity="center"/>

</LinearLayout>
